Fix to adjust title overlapping

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -453,7 +453,7 @@ body {
 .music-box .album .infos {
   background-color: rgba(70, 50, 57, 0.3);
   width: 100%;
-  height: 60px;
+  //height: 60px;
   position: relative;
   bottom: 0;
 }
